sftp: Fail cancelled jobs

Fail jobs which have been marked as cancelled, otherwise the job remains
and blocks unmounting. This can be reproduced by cancelling while
copying a large file to/from a mount and then trying to unmount it.

https://bugzilla.gnome.org/show_bug.cgi?id=759061